--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,16 @@
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
   <link rel="icon" href="./k-icon.png" />
   <title>K-BnB</title>
+  <meta property="og:title" content="K-BnB" />
+     <meta property="og:image" content="./K-BnB-Splash-Page.png" />
+     <meta
+       property="og:description"
+       content="A solo full-stack web application based on AirBnB"
+     />
+     <meta
+       property="og:url"
+       content="https://github.com/Nemurs/K-BnB"
+     />
 </head>
 
 <body>
